Add first tag with code snippet

--- a/index.html
+++ b/index.html
@@ -36,14 +36,37 @@
                         <tr>
                             <td class="tagName"></td>
                             <td>&lt;TAG&gt;</td>  -> replace TAG
-                            <td></td>
+                            <td>ADD tag description
+                                Sample Code:
+                                <pre>
+                                    <code>
+                                        &lt;table&gt;
+                                            &lt;tr&gt;
+                                                &lt;td&gt;Cell1&lt;/td&gt;
+                                            &lt;/tr&gt;
+                                        &lt;/table&gt;
+                                    </code>
+                                </pre>
+                            </td>
                         </tr>
                     -->
                     <tbody>
                         <tr>
                             <td class="tagName">Table</td>
                             <td>&lt;table&gt;</td>
-                            <td>Tables are used to arrange data into rows and columns.</td>
+                            <td>
+                                Tables are used to arrange data into rows and columns.<br/>
+                                Sample:
+                                <pre>
+                                    <code>
+                                        &lt;table&gt;
+                                            &lt;tr&gt;
+                                                &lt;td&gt;Cell1&lt;/td&gt;
+                                            &lt;/tr&gt;
+                                        &lt;/table&gt;
+                                    </code>
+                                </pre>
+                            </td>
                         </tr>
                     </tbody>
 
