--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>My Own Cheat Sheet</title>
         <link href="./css/styles.css" type="text/css" rel="stylesheet" />
         <meta charset="utf-8" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin=""> <!-- load faster-->
     </head>
     
     <body>
