--- a/index.html
+++ b/index.html
@@ -12,18 +12,27 @@
             <h1>My Own Cheat Sheet</h1>
             <nav>
                 <ul>
-                    <li class="html"><a href="#htmlSection">HTML</a></li>
-                    <li class="css"><a href="#cssSection">CSS</a></li>
-                    <li class="javascript"><a href="#javascriptSection">Javascript</a></li>
+                    <a href="#htmlSection"><li class="html">HTML</li></a>
+                    <a href="#cssSection"><li class="css">CSS</li></a>
+                    <a href="#javascriptSection"><li class="javascript">Javascript</li></a>
                 </ul>
             </nav>
         </header>
         <main>
             <!-- HTML section to descbribe some tags -->
-            <section id="htmlSection">
+            <section id="htmlSection" class="html">
                 <header class="sectionTitle">
                     <h2>HTML</h2>
-                    <p>HTML description</p>  <!-- generell Infos to be added later-->              
+                    <p>HTML description: Lorem ipsum dolor sit amet, 
+                        consectetur adipiscing elit. Duis eu ultricies 
+                        nisi, sed vestibulum ipsum. Pellentesque vel 
+                        neque eget sem accumsan mollis in at ex. Sed 
+                        tristique venenatis mollis. Lorem ipsum dolor 
+                        sit amet, consectetur adipiscing elit. Morbi 
+                        eu nibh magna. Nullam vulputate purus non augue 
+                        utrum, in tincidunt dui tincidunt. Nullam a 
+                        ante nisl. Lorem ipsum dolor sit amet, 
+                        consectetur adipiscing elit. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>  <!-- generell Infos to be added later-->              
                 </header>  
                 <table>
                     <thead>
@@ -97,12 +106,12 @@
                     
                 </main>                             
             </section>
-            <section id="cssSection">
+            <section id="cssSection" class="css">
                 <header class="sectionTitle">
                     <h2>CSS</h2>
                 </header>
             </section>
-            <section id="javascriptSection">
+            <section id="javascriptSection" class="javascript">
                 <header class="sectionTitle">
                     <h2>Javascript</h2>
                 </header>
